--- a/docs/01.前端/16.技术文章/60.javascript执行机制.md
+++ b/docs/01.前端/16.技术文章/60.javascript执行机制.md
@@ -15,7 +15,7 @@ tags:
   * 线程是进程的中的一个小单位。
   * 单线程的好处就是可以没有锁的问题，节约上下文切换时间。
 ### event loop
-![事件循环](./eventloop.jpg)
+![事件循环](/img/eventloop.jpg)
 * 同步和异步任务分别进入不同的执行"场所"，同步的进入主线程，异步的进入Event Table并注册函数。
 * 当指定的事情完成时，Event Table会将这个函数移入Event Queue。
 * 主线程内的任务执行完毕为空，会去Event Queue读取对应的函数，进入主线程执行。
