--- a/docs/01.前端/15.学习笔记/11.《TypeScript》简单上手.md
+++ b/docs/01.前端/15.学习笔记/11.《TypeScript》简单上手.md
@@ -290,52 +290,203 @@ foo = 'str'
 ```ts
 const nums: number[] = [1, 2, 3]
 
-const res = nums.find(i => i > 1) //编译器会认为 res 的类型为 number | undefined
+const res = nums.find((i) => i > 1) //编译器会认为 res 的类型为 number | undefined
 ```
+
 1. 通过关键字`as` 断言
+
 ```ts
 const num1 = res as number
 ```
 
 2. 通过`<>`断言
-:::warning 
-在JSX语法里不可使用，跟标签冲突
-:::
+   :::warning
+   在 JSX 语法里不可使用，跟标签冲突
+   :::
+
 ```ts
 const num2 = <number>res
 ```
 
 ## 接口
+
 用来制定一个类型的规则
 
 ```ts
 interface Post {
- title: string
- content: string
- subtitle?: string //可选成员
- readonly summary: string //只读成员
+  title: string
+  content: string
+  subtitle?: string //可选成员
+  readonly summary: string //只读成员
 }
 
 function printPost(post: Post) {
- console.log(post.title)
- console.log(post.content)
+  console.log(post.title)
+  console.log(post.content)
 }
 
 printPost({
- title:'ass',
- content:'aaaa',
- summary:'sss'
+  title: 'ass',
+  content: 'aaaa',
+  summary: 'sss',
 })
 ```
 
-* 动态成员
+- 动态成员
+
 ```ts
 interface Cache {
- [prop: string]: string
+  [prop: string]: string
 }
 
 const cache: Cache = {}
 cache.foo = '11'
 cache.bar = '22'
+```
+
+## 类
+
+属性类型：
+
+- `public` 公共（默认）
+- `private` 私有的，只能在当前类中访问
+- `protected` 受保护的，只能在当前类和其子类中访问
+- `readonly` 只读的，不可修改
+
+```ts
+class Person {
+  public name: string //默认是public，可以不用写
+  private age: number //私有属性
+  protected readonly gender: boolean //受保护、且只读属性
+
+  constructor(name: string, age: number) {
+    this.gender = true
+  }
+
+  sayHi(msg: string) {
+    console.log(`hi,I am ${this.name},${msg}`)
+    console.log(this.age)
+    console.log(this.age)
+    // this.gender = false //报错 无法分配  因为是只读的
+  }
+}
+
+class Student extends Person {
+  constructor(name: string, age: number) {
+    super(name, age)
+    // console.log(this.age) //报错 属性“age”为私有属性，只能在类“Person”中访问。
+    console.log(this.gender) //受保护属性可被子类访问
+  }
+}
+
+//类的访问修饰符
+const tom = new Person('tom', 16)
+console.log(tom.name)
+// console.log(tom.age)//报错 只能在Person类里访问
+// console.log(tom.gender)//报错 受保护，只能在Person类或者其子类里访问
+const jack = new Student()
+console.log(jack.age) //报错 只能在Person类里访问
+// console.log(jack.gender) //报错 属性“gender”受保护，只能在类“Person”及其子类中访问。
+```
+
+构造函数也可以是私有的，需要通过一个静态方法来创建实例
+
+```ts
+class Student extends Person {
+  private constructor(name: string, age: number) {
+    super(name, age)
+    console.log(this.gender)
+    // console.log(this.age)//私有属性，只能在Person类里访问
+  }
+  static create(name: string, age: number) {
+    return new Student(name, age)
+  }
+}
+// const jack = new Student() //无法新建实例，构造函数是受保护的
+const jack = Student.create('jack', 16)
+```
+
+## 类和接口的结合使用
+
+```ts
+interface Eat {
+  eat(food: string): void
+}
+
+interface Run {
+  run(distance: number): void
+}
+
+class Animal implements Eat, Run {
+  eat(food: string): void {
+    console.log(`呼噜呼噜吃${food}`)
+  }
+
+  run(distance: number): void {
+    console.log(`四条腿走了${distance}公里`)
+  }
+}
+
+class Person implements Eat, Run {
+  eat(food: string): void {
+    console.log(`优雅的吃${food}`)
+  }
+
+  run(distance: number): void {
+    console.log(`直立行走，走了${distance}公里`)
+  }
+}
+```
+
+## 抽象类
+比如说动物类，太多种类，吃的东西 和 走路的方法都不同，这时就可以定一个抽象类来约束`eat`和`run`方法
+:::warning
+无法创建实例，只能被继承
+:::
+
+```ts
+abstract class Animal {
+  eat(food: string): void {
+    console.log(`呼噜呼噜吃${food}`)
+  }
+
+  abstract run(distance: number): void //抽象方法，需要有abstract关键字且不能有方法体
+}
+
+class Dog extends Animal {
+  run(distance: number): void {
+    console.log(`狗是四条腿走的，走了${distance}`)
+  }
+}
+
+// const pig = new Animal() 无法创建实例
+
+const dog = new Dog()
+dog.eat('骨头')
+dog.run(100)
+```
+
+## 泛型
+在函数定义时因为不知道实际类型，先不指定类型，运用时再定义。
+使用`<T>`代表泛型
+
+```ts
+function createArray<T> (length: number, value: T): T[]{
+  const arr = Array<T>(length).fill(value)
+  return arr
+}
+
+const stringArr = createArray<string>(3, 'a')
+```
+
+## 类型声明
+使用`declare`关键字，为一些暂时没有`TypeScript`实现的第三方插件，定义方法类型。
+
+```ts
+import {camelCase} from 'lodash'
+
+declare function camelCase (input: string): string
+
+const res = camelCase('hello world')
 ```
 
