--- a/docs/01.前端/15.学习笔记/11.《TypeScript》简单上手.md
+++ b/docs/01.前端/15.学习笔记/11.《TypeScript》简单上手.md
@@ -11,7 +11,7 @@ tags:
 
 `TypeScript`是一门强类型语言，是`JavaScript`的超集。同时是一门渐进式的语言，可以不用深入学习即可上手。
 
-  <iframe :src="$withBase('/markmap/TypeScript-getting-started.html')" width="100%" height="1000" frameborder="0" scrolling="No" leftmargin="0" topmargin="0"></iframe>
+  <iframe :src="$withBase('/markmap/TypeScript-getting-started.html')" width="100%" height="1000" frameborder="1" scrolling="yes" leftmargin="0" topmargin="0"></iframe>
 
 ## 原始数据类型
 
